release v3.1.0