@@ -9,9 +9,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import uk.gov.cca.api.account.domain.dto.TargetUnitAccountBusinessInfoDTO;
 import uk.gov.cca.api.common.domain.MeasurementType;
-import uk.gov.cca.api.targetperiod.domain.TargetPeriod;
-import uk.gov.cca.api.targetperiod.domain.TargetPeriodType;
-import uk.gov.cca.api.targetperiod.service.TargetPeriodService;
+import uk.gov.cca.api.targetperiodreporting.targetperiod.domain.TargetPeriod;
+import uk.gov.cca.api.targetperiodreporting.targetperiod.domain.TargetPeriodType;
+import uk.gov.cca.api.targetperiodreporting.targetperiod.service.TargetPeriodService;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.AccountPerformanceDataInfo;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.AccountPerformanceDataStatus;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.PerformanceDataContainer;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.PerformanceDataEntity;
@@ -20,12 +21,13 @@ import uk.gov.cca.api.targetperiodreporting.performancedata.domain.PerformanceRe
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.SurplusBuyOutDetermination;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.TargetPeriodResultType;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.TargetsPreviousPerformance;
-import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.PerformanceBuyOutSurplusDetailsDTO;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.PerformanceDataBuyOutSurplusDetailsDTO;
 import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.AccountPerformanceDataStatusInfoDTO;
-import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.AccountPerformanceReportDetailsDTO;
-import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountsPerformanceReportDTO;
-import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountsPerformanceReportItemDTO;
-import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountsPerformanceReportSearchCriteria;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.AccountPerformanceDataReportDetailsDTO;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountPerformanceDataReportListDTO;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountPerformanceDataReportItemDTO;
+import uk.gov.cca.api.targetperiodreporting.performancedata.domain.dto.SectorAccountPerformanceDataReportSearchCriteria;
+import uk.gov.cca.api.targetperiodreporting.performancedata.repository.AccountPerformanceDataStatusCustomRepository;
 import uk.gov.cca.api.targetperiodreporting.performancedata.repository.AccountPerformanceDataStatusRepository;
 import uk.gov.cca.api.targetperiodreporting.performancedata.repository.PerformanceDataReportRepository;
 import uk.gov.netz.api.authorization.core.domain.AppUser;
@@ -36,6 +38,7 @@ import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -48,11 +51,11 @@ import static uk.gov.netz.api.common.constants.RoleTypeConstants.REGULATOR;
 @ExtendWith(MockitoExtension.class)
 class AccountPerformanceDataStatusQueryServiceTest {
 
-	@Mock
-	private AccountPerformanceDataStatusRepository accountPerformanceDataStatusRepository;
-
 	@InjectMocks
 	private AccountPerformanceDataStatusQueryService service;
+
+	@Mock
+	private AccountPerformanceDataStatusRepository accountPerformanceDataStatusRepository;
 
 	@Mock
 	private TargetPeriodService targetPeriodService;
@@ -60,23 +63,27 @@ class AccountPerformanceDataStatusQueryServiceTest {
 	@Mock
 	private PerformanceDataReportRepository performanceDataReportRepository;
 
+	@Mock
+	private AccountPerformanceDataStatusCustomRepository accountPerformanceDataStatusCustomRepository;
+
 	@Test
-	void testGetAccountsForPerformanceDataReportingBySector_PRIMARY() {
+	void getAccountsForPerformanceDataReportingBySector() {
 		final Long sectorAssociationId = 123L;
 		final Long targetPeriodId = 456L;
-		final PerformanceDataSubmissionType submissionType = PerformanceDataSubmissionType.PRIMARY;
+		final String accountName = "accountName";
+		final String accountName2 = "accountName2";
 
 		List<TargetUnitAccountBusinessInfoDTO> accounts = Arrays.asList(
-				new TargetUnitAccountBusinessInfoDTO(1001L, "ADS_1-T00001"),
-				new TargetUnitAccountBusinessInfoDTO(1002L, "ADS_1-T00002")
+				new TargetUnitAccountBusinessInfoDTO(1001L, "ADS_1-T00001", accountName),
+				new TargetUnitAccountBusinessInfoDTO(1002L, "ADS_1-T00002", accountName2)
 		);
 
 		when(accountPerformanceDataStatusRepository
-				.findEligibleAccountsForPrimaryPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId))
+				.findEligibleAccountsForPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId))
 				.thenReturn(accounts);
 
 		List<TargetUnitAccountBusinessInfoDTO> result = service
-				.getAccountsForPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId, submissionType);
+				.getAccountsForPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId);
 
 		assertEquals(2, result.size());
 		assertEquals(1001L, result.get(0).getAccountId());
@@ -84,34 +91,51 @@ class AccountPerformanceDataStatusQueryServiceTest {
 		assertEquals(1002L, result.get(1).getAccountId());
 		assertEquals("ADS_1-T00002", result.get(1).getBusinessId());
 		verify(accountPerformanceDataStatusRepository, times(1))
-				.findEligibleAccountsForPrimaryPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId);
+				.findEligibleAccountsForPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId);
 	}
 
 	@Test
-	void testGetAccountsForPerformanceDataReportingBySector_SECONDARY() {
-		final Long sectorAssociationId = 123L;
-		final Long targetPeriodId = 456L;
-		final PerformanceDataSubmissionType submissionType = PerformanceDataSubmissionType.SECONDARY;
+	void findAccountsWithPerformanceDataForTargetPeriod() {
+		final TargetPeriodType targetPeriodType = TargetPeriodType.TP6;
 
-		List<TargetUnitAccountBusinessInfoDTO> accounts = Arrays.asList(
-				new TargetUnitAccountBusinessInfoDTO(1001L, "ADS_1-T00001"),
-				new TargetUnitAccountBusinessInfoDTO(1002L, "ADS_1-T00002")
-		);
+		final AccountPerformanceDataInfo info = AccountPerformanceDataInfo.builder()
+				.accountId(1L)
+				.build();
 
-		when(accountPerformanceDataStatusRepository
-				.findEligibleAccountsForSecondaryPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId))
-				.thenReturn(accounts);
+        when(accountPerformanceDataStatusCustomRepository.findAccountsWithPerformanceDataByTargetPeriod(targetPeriodType))
+                .thenReturn(List.of(info));
 
-		List<TargetUnitAccountBusinessInfoDTO> result = service
-				.getAccountsForPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId, submissionType);
+		// Invoke
+		List<AccountPerformanceDataInfo> result = service.findAccountsWithPerformanceDataForTargetPeriod(targetPeriodType);
 
-		assertEquals(2, result.size());
-		assertEquals(1001L, result.get(0).getAccountId());
-		assertEquals("ADS_1-T00001", result.get(0).getBusinessId());
-		assertEquals(1002L, result.get(1).getAccountId());
-		assertEquals("ADS_1-T00002", result.get(1).getBusinessId());
-		verify(accountPerformanceDataStatusRepository, times(1))
-				.findEligibleAccountsForSecondaryPerformanceDataReportingBySector(sectorAssociationId, targetPeriodId);
+		// Verify
+		assertThat(result).hasSize(1);
+		assertThat(result.getFirst()).isEqualTo(info);
+        verify(accountPerformanceDataStatusCustomRepository, times(1))
+                .findAccountsWithPerformanceDataByTargetPeriod(targetPeriodType);
+	}
+
+	@Test
+	void findAccountsWithPerformanceDataForTargetPeriod_with_account_ids() {
+		final Set<Long> accountIds = Set.of(1L);
+		final TargetPeriodType targetPeriodType = TargetPeriodType.TP6;
+
+		final AccountPerformanceDataInfo info = AccountPerformanceDataInfo.builder()
+				.accountId(1L)
+				.build();
+
+        when(accountPerformanceDataStatusCustomRepository
+                .findAccountsWithPerformanceDataByTargetPeriodAndAccountIdIn(targetPeriodType, accountIds))
+                .thenReturn(List.of(info));
+
+		// Invoke
+		List<AccountPerformanceDataInfo> result = service.findAccountsWithPerformanceDataForTargetPeriod(targetPeriodType, accountIds);
+
+		// Verify
+		assertThat(result).hasSize(1);
+		assertThat(result.getFirst()).isEqualTo(info);
+        verify(accountPerformanceDataStatusCustomRepository, times(1))
+                .findAccountsWithPerformanceDataByTargetPeriodAndAccountIdIn(targetPeriodType, accountIds);
 	}
 
 	@Test
@@ -158,25 +182,25 @@ class AccountPerformanceDataStatusQueryServiceTest {
 	}
 
 	@Test
-	void testGetSectorAccountsPerformanceDataReport() {
+	void testGetSectorAccountPerformanceDataReportList() {
 		Long sectorAssociationId = 1L;
-		SectorAccountsPerformanceReportSearchCriteria criteria = SectorAccountsPerformanceReportSearchCriteria.builder().targetPeriodType(TargetPeriodType.TP6)
-				.paging(PagingRequest.builder().pageNumber(0L).pageSize(30L).build()).build();
+		SectorAccountPerformanceDataReportSearchCriteria criteria = SectorAccountPerformanceDataReportSearchCriteria.builder().targetPeriodType(TargetPeriodType.TP6)
+				.paging(PagingRequest.builder().pageNumber(0).pageSize(30).build()).build();
 
-		SectorAccountsPerformanceReportItemDTO item1 = new SectorAccountsPerformanceReportItemDTO(1L, "ADS-T00001", "ADS operator", LocalDateTime.now(), 0, TargetPeriodResultType.OUTSTANDING, PerformanceDataSubmissionType.PRIMARY,false);
-		SectorAccountsPerformanceReportItemDTO item2 = new SectorAccountsPerformanceReportItemDTO(2L, "ADS-T00002", "ADS operator 2", LocalDateTime.now(), 1, TargetPeriodResultType.BUY_OUT_REQUIRED, PerformanceDataSubmissionType.PRIMARY, false);
+		SectorAccountPerformanceDataReportItemDTO item1 = new SectorAccountPerformanceDataReportItemDTO(1L, "ADS-T00001", "ADS operator", LocalDateTime.now(), 0, TargetPeriodResultType.OUTSTANDING, PerformanceDataSubmissionType.PRIMARY,false);
+		SectorAccountPerformanceDataReportItemDTO item2 = new SectorAccountPerformanceDataReportItemDTO(2L, "ADS-T00002", "ADS operator 2", LocalDateTime.now(), 1, TargetPeriodResultType.BUY_OUT_REQUIRED, PerformanceDataSubmissionType.PRIMARY, false);
 
-		SectorAccountsPerformanceReportDTO expectedResults = SectorAccountsPerformanceReportDTO.builder()
-				.performanceReportItems(List.of(item1, item2))
+		SectorAccountPerformanceDataReportListDTO expectedResults = SectorAccountPerformanceDataReportListDTO.builder()
+				.performanceDataReportItems(List.of(item1, item2))
 				.total(2L)
 				.build();
 
-		when(performanceDataReportRepository.getSectorAccountsPerformanceReportBySearchCriteria(sectorAssociationId, criteria)).thenReturn(expectedResults);
+		when(performanceDataReportRepository.getSectorAccountPerformanceDataReportListBySearchCriteria(sectorAssociationId, criteria)).thenReturn(expectedResults);
 
-		SectorAccountsPerformanceReportDTO actualResults = service.getSectorAccountsPerformanceDataReport(sectorAssociationId, criteria);
+		SectorAccountPerformanceDataReportListDTO actualResults = service.getSectorAccountPerformanceDataReportList(sectorAssociationId, criteria);
 
 		assertEquals(expectedResults, actualResults);
-		verify(performanceDataReportRepository, times(1)).getSectorAccountsPerformanceReportBySearchCriteria(sectorAssociationId, criteria);
+		verify(performanceDataReportRepository, times(1)).getSectorAccountPerformanceDataReportListBySearchCriteria(sectorAssociationId, criteria);
 
 	}
 
@@ -214,7 +238,7 @@ class AccountPerformanceDataStatusQueryServiceTest {
 	}
 
 	@Test
-	void getAccountPerformanceDataDetails() {
+	void getAccountPerformanceDataReportDetails() {
 		final Long accountId = 999L;
 		final TargetPeriodType targetPeriodType = TargetPeriodType.TP6;
 
@@ -234,13 +258,13 @@ class AccountPerformanceDataStatusQueryServiceTest {
 				.thenReturn(Optional.of(accountPerformanceDataStatus));
 
 
-		AccountPerformanceReportDetailsDTO result = service.getAccountPerformanceReportDetails(accountId, targetPeriodType);
+		AccountPerformanceDataReportDetailsDTO result = service.getAccountPerformanceDataReportDetails(accountId, targetPeriodType);
 		assertEquals(TargetPeriodResultType.TARGET_MET, result.getTpOutcome());
 
 	}
 
 	@Test
-	void getLastPerformanceBuyOutSurplusDetails() {
+	void getLastPerformanceDataBuyOutSurplusDetails() {
 		final Long accountId = 999L;
 		final TargetPeriodType targetPeriodType = TargetPeriodType.TP6;
 
@@ -264,9 +288,10 @@ class AccountPerformanceDataStatusQueryServiceTest {
 										.totalPriBuyOutCarbon(BigDecimal.ZERO)
 										.build())
 								.build())
+						.submissionDate(LocalDateTime.of(2025, 5, 5, 12, 0))
 						.build())
 				.build();
-		final PerformanceBuyOutSurplusDetailsDTO expected = PerformanceBuyOutSurplusDetailsDTO.builder()
+		final PerformanceDataBuyOutSurplusDetailsDTO expected = PerformanceDataBuyOutSurplusDetailsDTO.builder()
 				.performanceDataId(1L)
 				.reportVersion(2)
 				.submissionType(PerformanceDataSubmissionType.PRIMARY)
@@ -277,6 +302,7 @@ class AccountPerformanceDataStatusQueryServiceTest {
 				.priBuyOutCarbon(BigDecimal.TWO)
 				.priBuyOutCost(BigDecimal.TEN)
 				.totalPriBuyOutCarbon(BigDecimal.ZERO)
+				.submissionDate(LocalDateTime.of(2025, 5, 5, 12, 0))
 				.build();
 
 		when(accountPerformanceDataStatusRepository
@@ -284,15 +310,15 @@ class AccountPerformanceDataStatusQueryServiceTest {
 				.thenReturn(Optional.of(accountPerformanceDataStatus));
 
 		// Invoke
-		PerformanceBuyOutSurplusDetailsDTO result = service
-				.getLastPerformanceBuyOutSurplusDetails(accountId, targetPeriodType);
+		PerformanceDataBuyOutSurplusDetailsDTO result = service
+				.getLastPerformanceDataBuyOutSurplusDetails(accountId, targetPeriodType);
 
 		// Verify
 		assertThat(result).isEqualTo(expected);
 	}
 
 	@Test
-	void getLastUploadedReport() {
+	void getLastUploadedPerformanceData() {
 		final Long accountId = 999L;
 		final TargetPeriodType targetPeriodType = TargetPeriodType.TP6;
 		final Optional<PerformanceDataContainer> lastUploadedReport = Optional.of(PerformanceDataContainer.builder()
@@ -309,7 +335,7 @@ class AccountPerformanceDataStatusQueryServiceTest {
 						.build()));
 
 		// invoke
-		Optional<PerformanceDataContainer> result = service.getLastUploadedReport(accountId, targetPeriodType);
+		Optional<PerformanceDataContainer> result = service.getLastUploadedPerformanceData(accountId, targetPeriodType);
 
 		assertEquals(lastUploadedReport,result );
 		verify(accountPerformanceDataStatusRepository, times(1))
